--- a/templates/tax.html
+++ b/templates/tax.html
@@ -49,8 +49,9 @@
         <button id="submitExtraIncome">Submit</button>
       </div>
 
-      <button id="calculateTaxBtn">Calculate Tax</button>
+      <button id="calculateTaxBtn">Calculate Tax</button><br />
       <div id="taxResult"></div>
+      <button id="payNow">Pay Now</button>
       <h3>Tax Rates for Indian Rupees</h3>
 
       <p>
@@ -65,6 +66,7 @@
       </p>
     </div>
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="../script/tax.js"></script>
   </body>
 </html>
