--- a/css/home.css
+++ b/css/home.css
@@ -26,6 +26,7 @@
 
       .navbar {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
         background-color: #ffffff;
@@ -161,7 +162,9 @@
         }
       }
 
-      #toggleAsideButton{
-        position: absolute;
-      }
     
+      @media screen and (max-width: 768px) {
+        .notification-container{
+          right: auto;
+        }
+      }
