aplly some extra styling

--- a/templates/aside/contact.html
+++ b/templates/aside/contact.html
@@ -18,11 +18,11 @@
 	background-image: url('https://media.istockphoto.com/id/1342226850/photo/woman-checking-her-montly-expenses-while-having-coffee-break.jpg?s=612x612&w=0&k=20&c=XTLjsY7O4Kf4y5gne0rOqdlPUWWng2QDISWd2AofooU=');
 	background-size: cover;
 	background-position: center;
-	color: #222;
+	color: #fff;
 }
 
 .site-banner a {
-	color: #222;
+	color: #fff;
 	text-decoration: none;
 	font-weight: bold;
 	padding: 12px;
@@ -108,6 +108,9 @@ img {
 }
 
 @media screen and (max-width: 1000px) {
+	.site-banner *{
+		color: #222;
+	}
 	.footer-column {
 		width: 50%;
 	}
@@ -151,7 +154,7 @@ img {
 	<div class="container">
 		<div class="site-banner">
 			<div class="header-menu">
-				<a href="" style="font-size: 30px;"><b style="font-size: 50px;">Ex</b> Tracker</a> 
+				<a href="" style="font-size: 30px;"><b style="font-size: 50px;">Ex-</b><b>Tracker</b></a> 
 				<span id="menu-icon" onClick="toggleMenu()"><img src="../../assets/aside/contact/menu.png" /></span>
 				<span id="header-right-menu"> 
 					<a href="#">Our work</a> 
