--- a/css/home.css
+++ b/css/home.css
@@ -32,6 +32,7 @@
         background-color: #ffffff;
         padding: 10px 20px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        z-index: 2;
       }
 
       .left-side {
