--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,7 @@
         border-radius: 10px;
         padding: 20px;
         right: 10%;
+        z-index: 1;
       }
       #profile-pics-grid {
         display: grid;
@@ -93,6 +94,7 @@
         padding: 20px;
         right: 10vw;
         display: none;
+        z-index: 2;
       }
       .notification-container p {
         display: flex;
