--- a/css/expence_Income.css
+++ b/css/expence_Income.css
@@ -1,4 +1,8 @@
-
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, sans-serif;
   background-color: #f8f8f8;
@@ -41,9 +45,8 @@ header {
 .navbar div {
   cursor: pointer;
   padding: 10px 20px;
-  background-color: #0056b3;
-  /* margin: 0 80px; */
   border-radius: 5px;
+  background-color: #0056b3;
   transition: background-color 0.3s ease;
 }
 
@@ -61,7 +64,7 @@ header {
   height: 0;
   overflow: hidden;
 }
-.form-group{
+.form-group {
   margin: 10px auto;
 }
 .grid-container {
@@ -80,6 +83,9 @@ label {
   margin-bottom: 5px;
 }
 
+input{
+  width: 100%;
+}
 input[type="text"],
 input[type="number"],
 textarea {
@@ -88,19 +94,22 @@ textarea {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-input[type="date"],input[type="time"]{
+input[type="date"],
+input[type="time"] {
   font-size: 2rem;
   border: none;
   height: 2rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 5px;
   margin-bottom: 10px;
   border: 2px solid #ccc;
   border-bottom-color: transparent;
   border-radius: 5px;
 }
-input[type="date"]:hover,input[type="time"]:hover{
-  background-color:#007bff;
+input[type="date"]:hover,
+input[type="time"]:hover {
+  background-color: #007bff;
 }
 button[type="submit"] {
   margin-top: 20px;
@@ -178,6 +187,59 @@ button[type="submit"]:hover {
 }
 
 input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button{
-    -webkit-appearance: none;
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+@media screen and (max-width: 778px) {
+  .balance-info {
+    margin: 0;
+  }
+  .balance-info h2 {
+    font-size: 2rem;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+
+  .balance-info span {
+    font-size: 0.8rem;
+  }
+
+  .navbar div {
+    font-size: 12px;
+  }
+  input[type="date"],
+input[type="time"] {
+  font-size: 1.5rem;
+  border: none;
+  height: 1.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 4px;
+  margin-bottom: 8px;
+  border: 2px solid #ccc;
+  border-bottom-color: transparent;
+  border-radius: 5px;
+}
+}
+
+@media screen and (max-width: 468px) {
+  .navbar div {
+    font-size: 8px;
+    padding: 5px 10px;
+    border-radius: 2.5px;
+  }
+  input[type="date"],
+input[type="time"] {
+  font-size: 1rem;
+  border: none;
+  height: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 3px;
+  margin-bottom: 6px;
+  border: 2px solid #ccc;
+  border-bottom-color: transparent;
+  border-radius: 5px;
+}
 }
